<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.caoshun.dailynews.MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/my_page_background" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignTop="@+id/ll1"
                android:layout_centerHorizontal="true"
                android:background="@drawable/shape" >

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/qq" />
            </LinearLayout>

            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="未登录"
                android:textColor="#ffffff" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tool_bar_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_favorite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/favoriteicon_profile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:text="@string/favourite" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/setupicon_profile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:text="@string/setting" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/shape2" >
    </LinearLayout>
    <TextView
        style="@style/my_page_item_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"/>
    <TextView
        style="@style/my_page_item_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop"/>
    <TextView
        style="@style/my_page_item_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/special_supply"/>
    <TextView
        style="@style/my_page_item_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip_off"/>
    <TextView
        style="@style/my_page_item_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback"/>
    <TextView
        style="@style/my_page_item_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/system_setting"/>

</LinearLayout>